Sat Dec 13 04:59:20 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bin/erb (ERB::Main#run): get rid of shadowing outer local
	  variables.  [ruby-core:65772] [Feature #10395]

Fri Dec 12 21:56:44 2014  Kouhei Sutou  <kou@cozmixng.org>

	* gems/bundled_gems: Upgrade to test-unit 3.0.8. assert_throw and
	  assert_nothing_thrown in test-unit 3.0.7 were broken by
	  UncaughtThrowError change introduced in Ruby 2.2.0
	  preview2. These assertions in test-unit 3.0.8 work well with
	  UncaughtThrowError in Ruby 2.2.0 preview2.

Fri Dec 12 19:48:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bin/erb (ARGV.switch, ERB::Main#run): allow variables to be set
	  from the command line.  [ruby-core:65772] [Feature #10395]

Fri Dec 12 19:31:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/erb.rb (ERB#lineno): accessor for line number to eval.

	* lib/erb.rb (ERB#location=): setter of file name and line number.

Fri Dec 12 13:09:13 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_latest_gc_info): return :state field to show current
	  GC state (none/marking/sweeping).
	  [Feature #10590]

Fri Dec 12 10:49:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_crypt): check arguments more strictly.
	  * crypt() is not for wide char strings
	  * salt bytes should not be NUL

Fri Dec 12 08:16:01 2014  Matt Hoyle  <matt@deployable.co>

	* io.c (io_read) Fix spelling in docco for read.  [Fix GH-781]
	  try > tries

Thu Dec 11 19:06:01 2014  Koichi Sasada  <ko1@atdot.net>

	* class.c (class_alloc): Start from age == 2.
	  Class and Module objects can be living long life.

	* iseq.c: Same for ISeq objects.

	* gc.c (RVALUE_AGE_RESET): added.

	* gc.c (newobj_of): allow to generate (age != 0) objects.

	* gc.c (rb_copy_wb_protected_attribute): reset age for wb unprotected
	  objects.

	* include/ruby/ruby.h: add RUBY_TYPED_PROMOTED1 as an unrecommended
	  flag.

Thu Dec 11 05:37:52 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>
